# dbt-cloud-test

./: README.md  dbt_project.yml  pyproject.toml  requirements.txt
models/marts/: pronouns.sql  sexes.sql
models/staging/: 0_dbt.yml  titanic_stg_1.sql  titanic_stg_2.sql
