[tool.poetry]
name = "dbt-cloud-test"
version = "0.1.0"
description = "Testing out dbt Cloud"
authors = ["Lef Filippakis <Lef-F@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
dbt-postgres = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
